--- a/README
+++ b/README
@@ -1,10 +1,6 @@
 PolymorphicAssociation
 
-I had recently read http://m.onkey.org/2007/8/14/excuse-me-wtf-is-polymorphs from 
-Pratik Naik and went through has_many_polymorphs plugin 
-(http://blog.evanweaver.com/files/doc/fauna/has_many_polymorphs/files/README.html)
-created by Evan Weaver. The plugin is great, it's quite a big improvement from polymorphic association
-built in Rails. 
+I had recently read http://m.onkey.org/2007/8/14/excuse-me-wtf-is-polymorphs from Pratik Naik and went through has_many_polymorphs plugin (http://blog.evanweaver.com/files/doc/fauna/has_many_polymorphs/files/README.html) created by Evan Weaver. The plugin is great, it's quite a big improvement from polymorphic association built in Rails. 
 
 class Person < ActiveRecord::Base
   has_many_polymorphs :ownables, :from => [:dvds, :cars, :books], :through => :ownerships
@@ -39,22 +35,13 @@ Now we can do something like
 
 Sweet, just 3 lines of model code. 
 
-Inspired by the has_many_polymorps plugin, I decided to push it little bit more. At first, we can still see some
-issues with has_many_polymorps.
+Inspired by the has_many_polymorps plugin, I decided to push it little bit more. At first, we can still see some issues with has_many_polymorps.
 
-1. We still need to create Ownership model, and of course, a migration for it (it means a database tables). In short,
-we need to create one model (database table + migration) for each association. But I want NO TABLE.
+1. We still need to create Ownership model, and of course, a migration for it (it means a database tables). In short, we need to create one model (database table + migration) for each association. But I want NO TABLE.
 
-2. You can see from the example above, p.dvds or p.books will give you a list of dvd or books owned by that person. But what
-will happen if we want to add one more association like favorite, or borrow? In this case, p.books doesn't tell you this a 
-list of books that person owns or that person borrows from someone else.
+2. You can see from the example above, p.dvds or p.books will give you a list of dvd or books owned by that person. But what will happen if we want to add one more association like favorite, or borrow? In this case, p.books doesn't tell you this a list of books that person owns or that person borrows from someone else.
 
-3. How about both sides are polymorphs? For example we want to add Family model to the system. has_many_polymorphs does offer
-some way to handle that (http://blog.evanweaver.com/files/doc/fauna/has_many_polymorphs/files/README.html). But from my view,
-it's a little bit ugly and awkward.
-
-To solve these issues, I have come up a plugi called PolymorphicAssociation (I couldn't find a better name for it).
-The models now will be:
+3. How about both sides are polymorphs? For example we want to add Family model to the system. has_many_polymorphs does offer some way to handle that (http://blog.evanweaver.com/files/doc/fauna/has_many_polymorphs/files/README.html). But from my view, it's a little bit ugly and awkward. To solve these issues, I have come up a plugi called PolymorphicAssociation (I couldn't find a better name for it). The models now will be:
 
 class Person < ActiveRecord::Base
   via_polymorphs do
@@ -107,6 +94,4 @@ b.borrower
 
 and so on.
 
-Above I said no extra model. What I really mean is no extra table for each association.
-The plugin comes with 3 models and their migrations (you need to copy the migration files to 
-your migrate folder and do nothing with the models), but that's all what you need.
+Above I said no extra model. What I really mean is no extra table for each association. The plugin comes with 3 models and their migrations (you need to copy the migration files to your migrate folder and do nothing with the models), but that's all what you need.
